feat: shifts spec + domain + repository interface
